# assignments

./: main.py  requirements.txt
Backend_Project1_VoxPop/: VoxPop.py
HW_Backend_2/: cars_pagination.py
HW_Backend_3/: main.py  pyproject.toml
HW_Backend_3/repositories/: cars.py
HW_Backend_3/routes/: cars.py
HW_Backend_3/templates/: home.html
HW_Backend_3/templates/cars/: list.html  new.html  search.html
HW_Backend_4/: pyproject.toml
HW_Backend_4/app/: models.py  repo.py  routes.py
HW_Backend_4/templates/books/: book_detail.html  book_list.html
HW_Backend_4/tests/: test_task1.py
HW_Backend_5/: pyproject.toml
HW_Backend_5/app/: main.py  repo.py  routes.py
HW_Backend_5/templates/: home.html
HW_Backend_5/templates/books/: book_detail.html  book_list.html  edit.html  new.html
HW_Backend_5/tests/: test_books.py  test_task1.py
HW_Backend_6/flower_marketplace/: .gitignore  dependencies.py  main.py  pyproject.toml
HW_Backend_6/flower_marketplace/models/: flower.py  purchase.py  user.py
HW_Backend_6/flower_marketplace/repo/: flowers.py  purchases.py  users.py
HW_Backend_6/flower_marketplace/routes/: auth.py  cart.py  flowers.py  purchases.py
HW_Backend_6/flower_marketplace/templates/auth/: login.html  profile.html  signup.html
HW_Backend_6/flower_marketplace/templates/flowers/: list.html
HW_Backend_6/flower_marketplace/templates/purchases/: list.html
HW_WSGI_FastAPI/: fastapi_hello.py  fastapi_meaning_life.py  ping_pong.py  pyproject.toml  requirements.txt  server_request_info.py
assignment6/: 001.py  002.py  004.py  006.py  010.py  011.py  012.py  013.py  014.py  015.py  016.py  017.py  018.py  019.py  020.py  022.py  3.py  5.py  7.py  8.py  9.py
assignment7/hw-7-updated-master/hw-7-updated-doctorrin-master/: hw.py  hw_bonus.py  test_hw.py
assignment8/hw-8-updated-master/hw-8-updated-doctorrin-master/: hw.py
assignment9/hw-9-master/hw-9-doctorrin-master/: hw.py
