[project]
name = "hw-wsgi-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Zharas",email = "zharas.tuyanov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "fastapi (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
